# dipstick

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
dipstick-ui/: .env  .eslintrc.cjs  .prettierrc.cjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dipstick-ui/src/: main.tsx
dipstick-ui/src/api/dipstick/can/v1/: bus.ts  frame.ts  id.ts  service.client.ts  service.ts
dipstick-ui/src/api/dipstick/core/v1/: direction.ts  entity.ts  file.ts  logging.ts  service.client.ts  service.ts
dipstick-ui/src/api/dipstick/device/v1/: action.ts  device.ts  ina2xx.ts  sensor.ts  service.client.ts  service.ts
dipstick-ui/src/api/dipstick/gpio/v1/: chip.ts  pin.ts  service.client.ts  service.ts
dipstick-ui/src/api/dipstick/shadow/v1/: service.client.ts  service.ts  shadow.ts  signal.ts
dipstick-ui/src/api/dipstick/spi/v1/: device.ts  service.client.ts  service.ts
dipstick-ui/src/api/dipstick/stack/v1/: service.client.ts  service.ts  stack.ts
dipstick-ui/src/api/dipstick/xcp/v1/: a2l.ts  protocol.ts  service.client.ts  service.ts  session.ts
dipstick-ui/src/api/google/protobuf/: duration.ts  struct.ts  timestamp.ts
dipstick-ui/src/components/: RootLayout.tsx
dipstick-ui/src/hooks/: core.ts  gpio.ts  grpc.ts  shadow.ts  spi.ts  useGrpcTransport.ts  useShadowClient.ts  useShadowSignals.ts
dipstick-ui/src/routes/: ErrorPage.tsx  Root.tsx  Shadow.tsx
dipstick-ui/src/routes/core.v1/: index.tsx  logging.tsx
protobuf/: README.md  buf.gen.yaml  buf.yaml
protobuf/dipstick/can/isotp/v1/: packet.proto  service.proto
protobuf/dipstick/can/v1/: bus.proto  driver.proto  filter.proto  frame.proto  id.proto  interface.proto  isotp.proto  service.proto  socket.proto
protobuf/dipstick/core/v1/: direction.proto  entity.proto  file.proto  logging.proto  service.proto
protobuf/dipstick/device/ina2xx/v1/: config.proto  state.proto
protobuf/dipstick/device/v1/: action.proto  device.proto  ina2xx.proto  sensor.proto  service.proto
protobuf/dipstick/gpio/v1/: chip.proto  pin.proto  service.proto
protobuf/dipstick/isotp/v1/: frame.proto  service.proto
protobuf/dipstick/server/v1/: logging.proto  service.proto
protobuf/dipstick/shadow/v1/: service.proto  shadow.proto  signal.proto  source.proto
protobuf/dipstick/spi/v1/: device.proto  service.proto  spi.proto
protobuf/dipstick/stack/v1/: service.proto  spec.proto  stack.proto
protobuf/dipstick/uds/v1/: message.proto  service.proto  session.proto
protobuf/dipstick/xcp/a2l/v1/: file.proto  module.proto  project.proto
protobuf/dipstick/xcp/v1/: a2l.proto  a2l_pointer.proto  cto.proto  frame.proto  protocol.proto  service.proto  session.proto  transport.proto
scripts/: rstart-lldb-server.sh  run-on-pi.sh
