[workspace]
members = ["packages/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace.package]
authors = ["Simon Berger <simon.berger@b-on.com>"]
categories = []
edition = "2021"
homepage = "https://github.com/inomotech-foss/dipstick"
keywords = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/inomotech-foss/dipstick"
rust-version = "1.79"

[workspace.dependencies]
dipstick-can = { path = "packages/dipstick-can" }
dipstick-core = { path = "packages/dipstick-core" }
dipstick-gpio = { path = "packages/dipstick-gpio" }
dipstick-proto = { path = "packages/dipstick-proto" }
dipstick-spi = { path = "packages/dipstick-spi" }

anyhow = "1"
bytes = "1"
futures = "0.3"
gpiocdev = { version = "0.7", features = ["async_tokio"] }
percent-encoding = "2"
prost = "0.13"
prost-types = "0.13"
protoc-wkt = "1"
rand = "0.8"
socketcan = { version = "3", features = ["tokio"] }
spidev = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
tonic-types = "0.12"
tonic-web = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[patch.crates-io]
# for <https://github.com/hyperium/tonic/pull/1787>
tonic = { git = "https://github.com/ttkgames/tonic.git", branch = "server-builders" }
tonic-reflection = { git = "https://github.com/ttkgames/tonic.git", branch = "server-builders" }
tonic-types = { git = "https://github.com/ttkgames/tonic.git", branch = "server-builders" }
tonic-web = { git = "https://github.com/ttkgames/tonic.git", branch = "server-builders" }

[profile.dev]
split-debuginfo = "packed"

[profile.release]
lto = true
