[workspace]
members = ["packages/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/workspaces.html

[workspace.package]
version = "1.0.0"
authors = ["Simon Berger <simon.berger@b-on.com>"]
categories = []
edition = "2021"
homepage = "https://github.com/inomotech-foss/dipstick"
keywords = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/inomotech-foss/dipstick"
rust-version = "1.79"

[workspace.dependencies]
dipstick-can = { path = "packages/dipstick-can" }
dipstick-core = { path = "packages/dipstick-core" }
dipstick-device = { path = "packages/dipstick-device" }
dipstick-gpio = { path = "packages/dipstick-gpio" }
dipstick-proto = { path = "packages/dipstick-proto" }
dipstick-shadow = { path = "packages/dipstick-shadow" }
dipstick-spi = { path = "packages/dipstick-spi" }
dipstick-stack = { path = "packages/dipstick-stack" }
dipstick-xcp = { path = "packages/dipstick-xcp" }

a2lfile = "2"
anyhow = "1"
bytes = "1"
console-subscriber = "0.4"
futures = "0.3"
gpiocdev = { version = "0.7", features = ["async_tokio"] }
percent-encoding = "2"
prost = "0.13"
prost-types = "0.13"
protoc-wkt = "1"
rand = "0.8"
socketcan = { version = "3.4.0-pre.0", features = ["tokio"] } # see below
spidev = "0.6"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tonic = "0.12"
tonic-build = "0.12"
tonic-reflection = "0.12"
tonic-types = "0.12"
tonic-web = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"

[patch.crates-io]
socketcan = { git = "https://github.com/inomotech-foss/socketcan-rs", rev = "25299c165568c43e45fdb30cd0295fd6329be632" }
# version 0.6.0 is missing #42
spidev = { git = "https://github.com/rust-embedded/rust-spidev", rev = "75c319bf9378ca166dc6088ea560548e84caf42f" }

[profile.dev]
split-debuginfo = "packed"

[profile.release]
split-debuginfo = "packed"
lto = true
